@@ -389,12 +389,13 @@ class PropertiesWindow(gtk.Dialog):
             
         create_metadata_entry("title", u"Title", 0)
         create_metadata_entry("creator", u"Creator", 1)
-        create_metadata_entry("rights", u"Rights", 2)
-        create_metadata_entry("description", u"Description", 3)
-        create_metadata_entry("publisher", u"Publisher", 4)
-        create_metadata_entry("date", u"Date", 5)
-        create_metadata_entry("identifier", u"Identifier", 6)
-        create_metadata_entry("language", u"Language", 7)
+        create_metadata_entry("contributor", u"Editor", 2)
+        create_metadata_entry("rights", u"Rights", 3)
+        create_metadata_entry("description", u"Description", 4)
+        create_metadata_entry("publisher", u"Publisher", 5)
+        create_metadata_entry("date", u"Date", 6)
+        create_metadata_entry("identifier", u"Identifier", 7)
+        create_metadata_entry("language", u"Language", 8)
 
         align = gtk.Alignment(0, 0, 1, 0)
         align.add(details)
