@@ -22,6 +22,7 @@ Version 0.1.3 (unreleased)
 * Added popup menu for words in the word list.
 * Added open cell count to properties window.
 * Added connectedness to properties window.
+* Added editor to Metadata tab in properties window.
 
 Version 0.1.2 (April 2, 2010)
 =============================
